# n12-summarizer

./: .env  main.py  pyproject.toml  test.py
data/: messages.json
src/: config.py  llm.py  qdrant.py  util.py
