[project]
name = "lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "langchain>=0.3.26",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
